--- a/src/Css/Nosotros.css
+++ b/src/Css/Nosotros.css
@@ -18,6 +18,7 @@
 #nosotros #nosotros-sect1 .h1nosotros,.h2nosotros{
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color: #ffff;
+    font-size: clamp(30px,5vw,40px);
 }
 #nosotros-sect1 h1{
     padding: 5px 0;
@@ -76,6 +77,9 @@
     padding: 7px 0;
     text-align: justify;
 }
+
+
+
 
 #valorSocial {
     margin-top: 50px;
@@ -137,6 +141,101 @@
     background-size: 40%;
     background-repeat: no-repeat;
 }
+
+#nosotros .card1 { order: 1;}
+#nosotros .card2 { order: 3;}
+#nosotros .card3 { order: 2;}
+#nosotros .card4 { order: 4;}
+
+
+@media (max-width: 800px) {
+    #nosotros-sect1 {
+        background-size: cover;
+    }
+
+    #somos {
+        margin: 0 20px;
+    }
+
+    #valorSocial {
+        flex-direction: column;
+        justify-content: center;
+    }
+    #valorSocial div{
+        width: 94%;
+    }
+    #valorSocial .card1 p{
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+    #valorSocial .fraseSocial {
+        padding-left: 20px;
+    }
+
+}
+
+@media (max-width: 600px) {
+    #nosotros-sect1 {
+        background-size: cover;
+        background-image: linear-gradient(rgba(31, 7, 0, 0.60), rgba(31, 7, 0, 0.60)), url(../Img/somosNosotros.jpg);
+    }
+    #somos {
+        margin: 0;
+    }
+    #nosotros .imagen {
+        display: none;
+    }
+
+    #valorSocial div{
+        width: calc(100% - 32px);
+        padding: 0 16px;
+    }
+    #valorSocial div p{
+        width: calc(100% - 32px);
+        padding: 0 16px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        margin-bottom: 20px;
+    }
+
+    #valorSocia .card1 p{
+        background-color: red;
+    }
+
+    #valorSocial div h4:hover{
+        background-color: #ff683513;
+    }
+
+   /*  #valorSocial {
+        margin-top: 15px;
+    }
+    #valorSocial .card1 p{
+        padding-left: 10px;
+        padding-right: 20px;
+    }
+    #valorSocial .card1 h4{
+        padding-left: 10px;
+        padding-right: 20px;
+    }
+    #valorSocial .card3{
+        padding-left: 10px;
+        padding-right: 30px;
+        width: calc(100% - 30px);
+    }
+    #valorSocial .card2{
+        padding-left: 10px;
+        padding-right: 30px;
+        width: calc(100% - 30px);
+    }
+    #valorSocial .card4{
+        padding-left: 10px;
+        padding-right: 30px;
+        width: calc(100% - 30px);
+    } */
+
+
+}
+
 
 
 
