probando pc con git

--- a/src/Css/Cont-mobile.css
+++ b/src/Css/Cont-mobile.css
@@ -4,7 +4,7 @@
     }
     #sct1 img {
         width: 100%;
-        height: 500px;
+        height: 500px; /* sss */
     }
     #sct1 .sct1texto {
         top: 20%;
