--- a/src/Css/Servicios.css
+++ b/src/Css/Servicios.css
@@ -61,23 +61,6 @@
     background-size: cover;
     padding-bottom: 40px;
 }
-.galeria-img {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    gap: 20px;
-    max-width: 1000px;
-    align-items: center;
-    margin: 0 auto;
-}
-
-.galeria-img img {
-    justify-content: center;
-    max-height: 300PX;
-    padding: 5px;
-    border-radius: 10px;
-}
 
 #otros-Servicios h3 {
     text-align: center;
@@ -205,7 +188,7 @@
   
   #otrosServicios {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     margin: 20px auto;
     align-items: center;
     padding-left: 10px;
@@ -224,11 +207,22 @@
     color: #303030;
     width: 45%;
     text-align: justify;
+    margin-bottom: 50px;
 
   }
 
   .sct-card {
     background-color: #00628B;
+    border-radius: 20px 0 20px 0;
+  }
+
+  .sct-card:hover  {
+    border-radius: 0 50px 0 20px;
+    background: linear-gradient(-270deg, #db7e0c 0%, #ff910a 100% );
+    transform: scale(1.03);
+  }
+  .sct-card:hover::before {
+    background: linear-gradient(-270deg, #db7e0c 0%, #ff910a 100% );
   }
 
   @keyframes animate {
