--- a/src/Css/Cont-mobile.css
+++ b/src/Css/Cont-mobile.css
@@ -1,19 +1,4 @@
-@media (max-width: 1200px) {
-    #sct1 {
-        display: flex;
-    }
-    #sct1 img {
-        width: 100%;
-        height: 500px; /* sss */
-    }
-    #sct1 .sct1texto {
-        top: 20%;
-    }
 
-    /* #sct5{
-        display: none;
-    } */
-}
 
 @media (max-width: 796px) {
     #sct1 img {
@@ -93,7 +78,7 @@
 
     #sct4 .sct4-soluciones h4 {
         padding: 20px 0;
-        margin-top: 10px;
+        margin-top: 0px;
     }
 
     #sct4 .sct4-soluciones p {
@@ -117,7 +102,7 @@
 
 /* ------------------------------------------------------ */
 
-@media (max-width: 500px) {
+@media (max-width: 600px) {
     #sct1 img {
         height: 390px;
     }
@@ -212,7 +197,7 @@
     }
 
     #sct4 .sct4-soluciones .card:nth-child(2) {
-        padding: 0 20px;
+        padding:  20px;
         line-height: 1.5;
     }
     #sct4 .sct4-soluciones .card:nth-child(3) {
