--- a/src/Css/Servicios.css
+++ b/src/Css/Servicios.css
@@ -143,7 +143,7 @@
     height: 5px;
     background: linear-gradient(-45deg, #f38907 0%, #d7310c 100% );
     z-index: -1;
-    transition: all 0.3s ;
+    transition: all 0.6s ;
   }
   
   .sct-card:hover::before {
@@ -227,48 +227,52 @@
 
   @keyframes animate {
     0% {
-      background-image: url(../Img/IMG1.jpg);
-      background-size: cover;
+        opacity: 0;
     }
     10% {
-      background-image: url(../Img/IMG2.jpg);
-      background-size: cover;
+        opacity: 1;
+        background-image: url(../Img/IMG2.jpg);
     }
     20% {
-      background-image: url(../Img/IMG3.jpg);
-      background-size: cover;
+        opacity: 1;
+        background-image: url(../Img/IMG_4112.PNG);
     }
     30% {
-      background-image: url(../Img/IMG4.jpg);
-      background-size: cover;
+        opacity: 1;
+        background-image: url(../Img/IMG_4102.jpg);
     }
     40% {
-      background-image: url(../Img/IMG5.jpg);
-      background-size: cover;
+        opacity: 1;
+        background-image: url(../Img/IMG5.jpg);
     }
     50% {
-      background-image: url(../Img/IMG6.jpg);
-      background-size: cover;
+        opacity: 1;
+        background-image: url(../Img/IMG6.jpg);
     }
     60% {
-      background-image: url(../Img/IMG7.jpg);
-      background-size: cover;
+        opacity: 1;
+        background-image: url(../Img/IMG7.jpg);
     }
     70% {
-      background-image: url(../Img/IMG8.jpg);
-      background-size: cover;
+        opacity: 1;
+        background-image: url(../Img/IMG8.jpg);
     }
     80% {
-      background-image: url(../Img/IMG9.jpg);
-      background-size: cover;
+        opacity: 1;
+        background-image: url(../Img/IMG9.jpg);
     }
     90% {
-      background-image: url(../Img/IMG11.jpg);
-      background-size: cover;
+        opacity: 1;
+        background-image: url(../Img/IMG11.jpg);
     }
-  }
+    100% {
+        opacity: 0;
+    }
+}
 
-
+#elemento-con-slider {
+  animation: animate 4s infinite;
+}
 
   @media (max-width: 820px) {
     #servicios-card {
